--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,16 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Chris-Notes{% endblock %}</title>
-    <link rel="stylesheet" href="./static/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
   </head>
   <body>
     <nav class="navbar">
-      <button
-        class="nav-toggle"
-        type="button"
-        target="#navbar"
-      >
-      </button>
       <div id="navbar">
         <div class="navbar-nav">
           <a 
