--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,7 +13,7 @@
       <nav class="navbar">
         <div class="navbar-nav">
           <h1 class="logo">Noteynotes</h1>
-          <a id="home" href="/home">Home</a>
+          <a id="home" href="/">Home</a>
           <a id="logout" href="/login">Login</a>
           <a id="logout" href="/logout">Logout</a>
           <a id="signup" href="/signup">Signup</a>
