--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -8,8 +8,8 @@
       <input type="email" class="form_email" id="email" name ="email" placeholder="Enter email...">
     </div>
     <div class="form__group">
-      <label for="firstname"><p>Name</p></label>
-      <input type="text" class="form_firstname" id="firstname" name ="firstname" placeholder="Enter first name...">
+      <label for="nickname"><p>Nickname</p></label>
+      <input type="text" class="form_nickname" id="nickname" name ="nickname" placeholder="Enter nickname...">
     </div>
     <div class="form__group">
       <label for="password1"><p>Password</p></label>
