--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <main>
-      
       <nav class="navbar">
         <div class="navbar-nav">
           <h1 class="logo">Noteynotes</h1>
@@ -20,6 +19,30 @@
           <div class="upper__block"></div>
         </div>
       </nav>
+
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            {% if category == 'error' %}
+              <div class="message_warning" role="alert">
+                  {{ message }}
+                  <button type="button">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              {% else %}
+              <div class="message_warning" role="success">
+                {{ message }}
+                <button type="button">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+            {% endif %}
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+
       <div class="container">
         {% block content%}
         {% endblock %}
