--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Chris-Notes{% endblock %}</title>
+    <title>{% block title %}Chris-Recipes{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
   </head>
   <body>
     <main>
       <nav class="navbar">
         <div class="navbar-nav">
-          <h1 class="logo">Noteynotes</h1>
+          <h1 class="logo">RecipesList</h1>
           <a id="home" href="/">Home</a>
           <a id="logout" href="/login">Login</a>
           <a id="logout" href="/logout">Logout</a>
